--- a/src/index.css
+++ b/src/index.css
@@ -118,37 +118,21 @@ svg {
   }
 }
 
-/* Container Style:
-   - Responsive max width: 1110px or width of viewport minus 1rem padding (lower amount is chosen).
-   - Horizontally centered with margin-inline auto.
-   - Uses CSS custom properties for width and padding.
-*/
-.container {
-  --max-width: 1110px;
-  --padding: 1rem;
-
-  width: min(var(--max-width), 100% - var(--padding) * 2);
-  margin-inline: auto;
-}
-
-.even-columns {
-  display: grid;
-  gap: 1rem;
-}
-
-/* in medium to large screens, place each item in evenly-spaced columns */
-@media (min-width: 50em) {
-  .even-columns {
-    grid-auto-flow: column;
-    grid-auto-columns: 1fr;
-  }
-}
-
 /* general styling */
 body {
   font-size: var(--fs-body);
   font-family: var(--ff-body);
   color: var(--clr-primary-400);
+}
+
+/* change all p that doesn't have a class */
+p:not([class]) {
+  opacity: 0.7;
+  max-width: 32ch;
+}
+
+p[data-width='wide'] {
+  max-width: 100%;
 }
 
 .button {
@@ -183,6 +167,38 @@ button:focus-visible {
 }
 
 /* Utility classes */
+
+/* Container Style:
+   - Responsive max width: 1110px or width of viewport minus 1rem padding (lower amount is chosen).
+   - Horizontally centered with margin-inline auto.
+   - Uses CSS custom properties for width and padding.
+*/
+.container {
+  --max-width: 1110px;
+  --padding: 1rem;
+
+  width: min(var(--max-width), 100% - var(--padding) * 2);
+  margin-inline: auto;
+}
+
+/* for the selected container of the .flow class, select all items but the first one */
+:where(.flow :not(:first-child)) {
+  margin-top: var(--flow-spacer, 3em);
+}
+
+.even-columns {
+  display: grid;
+  gap: 1rem;
+}
+
+/* in medium to large screens, place each item in evenly-spaced columns */
+@media (min-width: 50em) {
+  .even-columns {
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+  }
+}
+
 .visually-hidden {
   position: absolute;
   position: absolute !important;
